DB-4979 Add coverage tooling