@@ -74,6 +74,7 @@
     </dependencies>
     <properties>
         <skipTests>${maven.skip.tests}</skipTests>
+        <argLine>-Xmx3g -XX:MaxPermSize=256m</argLine>
     </properties>
     <build>
         <plugins>
@@ -101,7 +102,6 @@
                         <configuration>
                             <!--<groups>com.splicemachine.test.SerialTest</groups>-->
                             <excludedGroups>${excluded.categories}</excludedGroups>
-                            <argLine>-Xmx3g</argLine>
                             <redirectTestOutputToFile>true</redirectTestOutputToFile>
                             <dependenciesToScan>
                                 <dependency>com.splicemachine:splice_machine</dependency>
@@ -195,6 +195,7 @@
                                     <jvmarg value="-XX:+CMSPermGenSweepingEnabled"/>
                                     <jvmarg value="-XX:+CMSClassUnloadingEnabled"/>
                                     <jvmarg value="-XX:MaxPermSize=256M"/>
+				    <jvmarg value="${jacocoAgent}"/>
                                     <sysproperty key="log4j.configuration" value="file://${basedir}/src/test/resources/log4j-file.properties"/>
                                 </java>
                                 <java classname="com.splicemachine.test.SpliceTestPlatformWait" classpath="${classpath.test}" spawn="false">
